# CLenz

./: .gitignore  README.md  pyproject.toml
docs/: dev.md  domain-and-goals.md  fowler_smells.md  requirements.md  smells.md  system-context.md
resources/grammars/c/: C.g4
scripts/: generate_c_parser.py
src/clenz/: __init__.py
src/clenz/application/: control_flow.py  use_cases.py
src/clenz/domain/: control_flow.py  errors.py  events.py  model.py  ports.py  smells.py
src/clenz/infrastructure/: system.py
src/clenz/infrastructure/antlr/: control_flow_extractor.py  error_listener.py  parser_adapter.py  runtime.py
src/clenz/infrastructure/filesystem/: source_repository.py
src/clenz/infrastructure/linting/: smell_scanner.py
src/clenz/infrastructure/rendering/: nassi_html_renderer.py
src/clenz/presentation/cli/: main.py
tests/: test_domain_model.py  test_fp.py  test_fuzz_smell_scanner.py  test_nassi_diagrams.py  test_parse_use_cases.py  test_smell_scanner.py
tests/fixtures/: control_flow.c  invalid.c  valid.c
